== Version 2.xx ==

xx Xxx 2011

* New function +faccessat+(2) was added.  It fixes +test -r+ command.
  Thanks to Johannes Schauer.

== Version 2.14 ==

18 Dec 2010

* The source code was refactored: all functions was moved to separated files.
* The +opendir+(3) function is compiled only if it doesn't call other function
  internally.  It fixes +opendir+(3), +fts_open+(3) and +ftw+(3) functions.
* The +fts_*+(3) functions were reimplemented based on OpenBSD source.
* The +ftw_*+(3) functions were reimplemented based on GNU C Library source.
* The +__opendir2+(3) function was reimplemented based on FreeBSD source.
* Fixes were made for older GNU C Library and for cross-compiling environment.

== Version 2.13.1 ==

30 Nov 2010

* Fixes were made for older GNU C Library.

== Version 2.13 ==

29 Nov 2010

* Fixes were made for +realpath+(3) and +ftw+(3) functions.  +apt-ftparchive+
  command currently is working.
* Fixes were made for +canonicalize_file_name+(3), +ftw64+(3), +nftw+(3) and
  +nftw64+(3) functions.
* New functions +fts_children+(3) and +fts_read+(3) were added.
* Lazy dynamic symbol loading was implemented.  Thanks to Alexander Shishkin.
* Fixed bug when +FAKECHROOT_EXCLUDE_PATH+ list was sometimes ignored.
* All source code is now on LGPL license again.

== Version 2.12 ==

10 Nov 2010

* New function +execlp+(3).  Thanks to Robert Spanton.
* New functions +statfs+(2) and +statvfs+(2).  Thanks to Paweł Stawicki.
* Better support for GNU/kFreeBSD was made.

== Version 2.11 ==

12 Sep 2010

* Fixes were made for +getpeername+(2) and +getsockname+(2) functions.
  +host 127.0.0.1+ command currently is working.  Thanks to Daniel Tschan.
* Fixes were made for +canonicalize_file_name+(3) function.  +man-db+ command
  currently is working.
* New functions +__*_chk+(3) were added for GNU libc with fortify +level > 0+.
* New environment variable +FAKECHROOT_AF_UNIX_PATH+ defines an optional
  prefix for unix sockets.
* Better support for FreeBSD was made.