@@ -4,6 +4,7 @@ xx Xxx 2011
 
 * New function +faccessat+(2) was added.  It fixes +test -r+ command.
   Thanks to Johannes Schauer.
+* The +popen+(3) function were reimplemented based on OpenBSD source.
 
 == Version 2.14 ==
 
